# base64-regex

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml  release.yml
src/base64_regex/: __init__.py  __init__.pyi
